\!U new lerper and packahe codbase

--- a/lr/local-runner-console.properties
+++ b/lr/local-runner-console.properties
@@ -9,6 +9,10 @@ render-to-screen-sync=false
 # Не используется, если настройка render-to-screen=false.
 render-to-screen-size=1280x800
 
+# Номер тика, с которого игра будет отрисовываться на экран, или пустая строка для отрисовки всей игры.
+# Не используется, если настройка render-to-screen=false.
+render-to-screen-tick=
+
 # Имя файла с результатами игры. Формат файла описан в read.me.
 results-file=result.txt
 
@@ -44,8 +48,12 @@ p4-name=
 # По умолчанию (false) багги имеет больший приоритет.
 swap-car-types=false
 
+# Отключение столкновений кодемобилей: true или false.
+# Значение true не применяется в официальном чемпионате и может быть использовано исключительно в целях отладки.
+disable-car-collision=false
+
 # Имя карты или пустая строка для использования карты default.
-# Список карт: default, map01, map02, map03, map04, map05, map06.
+# Список карт: default, _fdoke, _tyamgin, _ud1, map01 - map15.
 map=
 
 # Начальный номер порта для подключения первой стратегии типа Local.
