--- a/lr/local-runner.properties
+++ b/lr/local-runner.properties
@@ -7,7 +7,11 @@ render-to-screen-sync=true
 
 # Размер окна визуализатора.
 # Не используется, если настройка render-to-screen=false.
-render-to-screen-size=1024x800
+render-to-screen-size=1280x800
+
+# Номер тика, с которого игра будет отрисовываться на экран, или пустая строка для отрисовки всей игры.
+# Не используется, если настройка render-to-screen=false.
+render-to-screen-tick=
 
 # Имя файла с результатами игры. Формат файла описан в read.me.
 results-file=result.txt
@@ -30,9 +34,9 @@ player-count=4
 #   Keyboard - стратегия, управляемая с клавиатуры. Нельзя указывать более одного раза.
 #       Автоматически устанавливает настройки render-to-screen=true и render-to-screen-sync=true.
 p1-type=Local
-p2-type=Empty
-p3-type=Empty
-p4-type=Empty
+p2-type=Quick
+p3-type=Quick
+p4-type=Quick
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 p1-name=
@@ -44,9 +48,13 @@ p4-name=
 # По умолчанию (false) багги имеет больший приоритет.
 swap-car-types=false
 
+# Отключение столкновений кодемобилей: true или false.
+# Значение true не применяется в официальном чемпионате и может быть использовано исключительно в целях отладки.
+disable-car-collision=false
+
 # Имя карты или пустая строка для использования карты default.
-# Список карт: default, map01, map02, map03, map04, map05, map06.
-map=
+# Список карт: default, _fdoke, _tyamgin, _ud1, map01 - map15.
+map=map01
 
 # Начальный номер порта для подключения первой стратегии типа Local.
 # Для каждой последующей стратегии данного типа номер порта будет увеличен на единицу.
