--- a/lr/local-runner.properties
+++ b/lr/local-runner.properties
@@ -35,6 +35,7 @@ player-count=4
 #       Автоматически устанавливает настройки render-to-screen=true и render-to-screen-sync=true.
 p1-type=Local
 p2-type=Quick
+#p2-type=Keyboard
 p3-type=Quick
 p4-type=Quick
 
@@ -54,7 +55,7 @@ disable-car-collision=true
 
 # Имя карты или пустая строка для использования карты default.
 # Список карт: default, _fdoke, _tyamgin, _ud1, map01 - map15.
-map=map03
+map=map04
 
 # Начальный номер порта для подключения первой стратегии типа Local.
 # Для каждой последующей стратегии данного типа номер порта будет увеличен на единицу.
